--- a/p8105_hw5_yd2810.md
+++ b/p8105_hw5_yd2810.md
@@ -20,7 +20,11 @@ library(tidyverse)
 
 ``` r
 library(broom)
+library(purrr)
+library(here)
 ```
+
+    ## here() starts at /Users/songshuojia/Dia/Columbia/Fall 2025/Data Science/HW/p8105_hw5_yd2810
 
 ## Problem 1
 
@@ -124,3 +128,78 @@ low. For small 𝜇, the ‘rej_only’ line sits above the ‘all’ line, for
 conditioning of p\<0.05 selects estimates that are farther from 0,
 creating selection bias and inflating estimation of 𝜇. As 𝜇 grow (\>=4)
 and power approaches 1, the two lines coincide.
+
+## Problem 3
+
+``` r
+homicide_raw <- read_csv(here("data", "homicide-data.csv"))
+```
+
+    ## Rows: 52179 Columns: 12
+    ## ── Column specification ────────────────────────────────────────────────────────
+    ## Delimiter: ","
+    ## chr (9): uid, victim_last, victim_first, victim_race, victim_age, victim_sex...
+    ## dbl (3): reported_date, lat, lon
+    ## 
+    ## ℹ Use `spec()` to retrieve the full column specification for this data.
+    ## ℹ Specify the column types or set `show_col_types = FALSE` to quiet this message.
+
+The raw data has 52179 observations and 12 variables. Each row
+represents one homicide case from 50 cities in 28 states.
+
+``` r
+data <- homicide_raw %>% 
+  mutate(
+    city_state = str_c(city,", ",state),
+    unsolved   = disposition %in% c("Closed without arrest", "Open/No arrest")
+  )
+```
+
+``` r
+city_homicide <- data %>% 
+  count(city_state,unsolved,name="n") %>% 
+  pivot_wider(names_from = unsolved,
+              values_from = n, values_fill = 0) %>% 
+  rename(solved = `FALSE`,unsolved=`TRUE`) %>% 
+  mutate(total=solved+unsolved)
+```
+
+``` r
+bal <- city_homicide %>% filter(city_state=="Baltimore, MD")
+
+bal_test <- prop.test(x=bal$unsolved,n=bal$total)
+bal_tidy <- tidy(bal_test)
+bal_tidy
+```
+
+    ## # A tibble: 1 × 8
+    ##   estimate statistic  p.value parameter conf.low conf.high method    alternative
+    ##      <dbl>     <dbl>    <dbl>     <int>    <dbl>     <dbl> <chr>     <chr>      
+    ## 1    0.646      239. 6.46e-54         1    0.628     0.663 1-sample… two.sided
+
+``` r
+city_est <- city_homicide %>% 
+  mutate(test = map2(unsolved, total, ~prop.test(.x, .y)),
+         out = map(test, tidy)) %>% 
+  unnest(out) %>% 
+  select(city_state, total, unsolved, estimate, conf.low, conf.high, p.value)
+```
+
+    ## Warning: There was 1 warning in `mutate()`.
+    ## ℹ In argument: `test = map2(unsolved, total, ~prop.test(.x, .y))`.
+    ## Caused by warning in `prop.test()`:
+    ## ! Chi-squared approximation may be incorrect
+
+``` r
+city_est %>% 
+  mutate(city_state=fct_reorder(city_state,estimate)) %>% 
+  ggplot(aes(x = city_state, y = estimate))+
+  geom_point()+
+  geom_errorbar(aes(ymin = conf.low, ymax = conf.high),width=0)+
+                  coord_flip()+
+                  labs(x = NULL, y = "Proportion unsolved",
+       title = "Homicide unsolved proportions by city")+
+         theme_minimal(base_size = 12)
+```
+
+![](p8105_hw5_yd2810_files/figure-gfm/unnamed-chunk-12-1.png)<!-- -->
